New Streaming and Download functionality

--- a/M3UToolsJPA/src/main/resources/templates/items.html
+++ b/M3UToolsJPA/src/main/resources/templates/items.html
@@ -10,8 +10,8 @@
 <script th:src="@{webjars/jquery/jquery.min.js}"></script>
 <!-- <script th:src="@{webjars/bootstrap/js/bootstrap.min.js}"></script> -->
 <script th:src="@{webjars/bootstrap/js/bootstrap.bundle.min.js}"></script>
-<script th:src="@{webjars/font-awesome/5.8.2/js/all.js}"></script>
-<link rel="stylesheet" th:href="@{webjars/font-awesome/5.8.2/css/all.css}"/>
+<script th:src="@{webjars/font-awesome/6.4.2/js/all.js}"></script>
+<link rel="stylesheet" th:href="@{webjars/font-awesome/6.4.2/css/all.css}"/>
 <link rel="stylesheet" th:href="@{webjars/bootstrap/css/bootstrap.min.css}" />
 
 
@@ -85,6 +85,7 @@
 						<th scope="col">Title</th>
 						<th scope="col"></th>
 						<th scope="col"></th>
+						<th scope="col"></th>
 					</tr>
 				</thead>
 				<tbody>
@@ -97,6 +98,14 @@
 						<button type="submit" class="btn btn-default btn-sm" name="action"
 							id="btndownload" value="download">
 							<i class="fa fa-download fa-lg"></i>
+						</button></td>
+				</form>
+				<form action="#" th:action="@{/stream}" method="get">
+					<td><input type="hidden" th:value="${item.tvgName}"
+						name="name" id="name" />
+						<button type="submit" class="btn btn-default btn-sm" name="action"
+							id="btnstream" value="stream">
+							<i class="fa fa-video-camera  fa-lg"></i>
 						</button></td>
 				</form>
 				<td><input type="hidden" th:value="${item.search}"
