--- a/M3UToolsJPA/src/main/resources/templates/items.html
+++ b/M3UToolsJPA/src/main/resources/templates/items.html
@@ -92,7 +92,7 @@
 					<tr th:each="item : ${items}">
 						<th hidden="true" scope="row">[[${item.id}]]</th>
 						<td>[[${item.tvgName}]]</td>
-						<form action="#" th:action="@{/newDownload}" method="post">
+						<form action="#" th:action="@{/newDownload}" method="get">
 					<td><input type="hidden" th:value="${item.tvgName}"
 						name="name" id="name" />
 						<button type="submit" class="btn btn-default btn-sm" name="action"
