--- a/M3UToolsJPA/src/main/resources/templates/fragments/informationModal.html
+++ b/M3UToolsJPA/src/main/resources/templates/fragments/informationModal.html
@@ -1,19 +1,34 @@
 <div th:fragment="informationModal" id="informationModal" class="modal fade" role="dialog">
 	<div class="modal-dialog">
 		<!-- Modal content-->
-		<div class="modal-content">
-			<div class="bg-image" id="posterPath" style="background-image: url(); background-size: cover;">
-				<div class="modal-header">
-					<!-- 					<button type="button" class="close" data-dismiss="modal">&times;</button> -->
-					<h4 class="modal-title" id="modalTitleH4"></h4>
-					<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-				</div>
-				<div class="modal-body" style="mix-blend-mode:hard-light;" id="modalBodyDiv"></div>
-				<div class="modal-body" id="releaseDate"></div>
-				<div class="modal-footer">
-					<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-				</div>
-			</div>
+		<div class="modal-content text-white" style="background-color: black;">
+			<table>
+				<tr>
+					<td colspan="2">
+						<h4 class="modal-title" id="modalTitleH4"></h4>
+					</td>
+				</tr>
+				<tr>
+					<td style="max-width: 50%; max-height: 50%;">
+						<img id="posterPath" style="max-width: 100%; height: auto;" />
+					</td>
+					<td>
+						<div class="modal-body" style="mix-blend-mode:hard-light;" id="modalBodyDiv"></div>
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<div class="modal-body" id="releaseDate"></div>
+					</td>
+					<td align="center">
+						<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+
+					</td>
+				</tr>
+				</tr>
+
+			</table>
+
 		</div>
 	</div>
 </div>
