--- a/M3UToolsJPA/src/main/resources/templates/fragments/informationModalScript.html
+++ b/M3UToolsJPA/src/main/resources/templates/fragments/informationModalScript.html
@@ -34,7 +34,8 @@ function openInformationModal(row) { // begin function
                     $("#modalTitleH4").html(data.title);
                     $("#modalBodyDiv").html(data.overview);
                     $("#releaseDate").html(data.release_date);
-                    document.getElementById("posterPath").style.backgroundImage = "url('https://image.tmdb.org/t/p/original" + data.poster_path + "')"
+                    //document.getElementById("posterPath").style.backgroundImage = "url('https://image.tmdb.org/t/p/original" + data.poster_path + "')"
+                    document.getElementById("posterPath").src = "https://image.tmdb.org/t/p/original" + data.poster_path + ""
                     $("#informationModal").modal("show");
                 }
         	})
