--- a/M3UToolsJPA/src/main/resources/templates/editChannelsForm.html
+++ b/M3UToolsJPA/src/main/resources/templates/editChannelsForm.html
@@ -25,7 +25,7 @@
 <body>
 	<div th:replace="~{fragments/header :: header}"></div>
 	<div class="container-fluid">
-		<h2 class="text-center">Tv Channels</h2>
+		<h3 class="text-center">TV Channels</h3>
 
 		<div class="container">
 			<form th:action="@{/tvChannels}" id="searchForm">
