--- a/M3UToolsJPA/src/main/resources/templates/fragments/header.html
+++ b/M3UToolsJPA/src/main/resources/templates/fragments/header.html
@@ -28,9 +28,9 @@
 					<li class="nav-item">
 						<a class="nav-link" th:href="@{/tvChannels}">TV Channels</a>
 					</li>
-					<li class="nav-item">
+					<!--<li class="nav-item">
 						<a class="nav-link" th:href="@{/showStatus}">Status</a>
-					</li>
+					</li> -->
 				</ul>
 				<form class="d-flex" role="search">
 					<button type="button" class="btn btn-outline-success" th:onclick="|window.location.href='/search'|">Search</button>
