--- a/M3UToolsJPA/src/main/resources/templates/search.html
+++ b/M3UToolsJPA/src/main/resources/templates/search.html
@@ -1,105 +1,67 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<meta charset="UTF-8">
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<meta name="viewport"
-	content="width=device-width,initial-scale=1.0,minimum-scale=1.0" />
-<title>M3UToolsJPA</title>
+	<meta charset="UTF-8">
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+	<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0" />
+	<title>M3UToolsJPA</title>
 
-<script th:src="@{webjars/jquery/jquery.min.js}"></script>
-<!-- <script th:src="@{webjars/bootstrap/js/bootstrap.min.js}"></script> -->
-<script th:src="@{webjars/bootstrap/js/bootstrap.bundle.min.js}"></script>
-<script th:src="@{webjars/font-awesome/6.4.2/js/all.js}"></script>
-<link rel="stylesheet" th:href="@{webjars/font-awesome/6.4.2/css/all.css}"/>
-<link rel="stylesheet" th:href="@{webjars/bootstrap/css/bootstrap.min.css}" />
+	<script th:src="@{webjars/jquery/jquery.min.js}"></script>
+	<!-- <script th:src="@{webjars/bootstrap/js/bootstrap.min.js}"></script> -->
+	<script th:src="@{webjars/bootstrap/js/bootstrap.bundle.min.js}"></script>
+	<script th:src="@{webjars/font-awesome/6.4.2/js/all.js}"></script>
+	<link rel="stylesheet" th:href="@{webjars/font-awesome/6.4.2/css/all.css}" />
+	<link rel="stylesheet" th:href="@{webjars/bootstrap/css/bootstrap.min.css}" />
 
-<link rel="stylesheet" type="text/css" th:href="@{/css/style.css}" />
+	<link rel="stylesheet" type="text/css" th:href="@{/css/style.css}" />
 
-<div th:replace="~{fragments/informationModalScript :: script}"></div>
+	<div th:replace="~{fragments/informationModalScript :: script}"></div>
 </head>
+
 <body>
 
 	<div th:replace="~{fragments/header :: header}"></div>
-	
+
 	<div class="container-fluid" style="max-width: 1024px; margin: 0 auto;">
 		<h3 class="text-center">Search</h3>
-		
+
 		<form th:action="@{/search}" id="searchForm">
-				<div class="row d-flex gap-3">
-					<div class="col-md-6 mt-2">
-						
-							<div class="input-group-prepend gap-3">
-								<label class="input-group-text gap-3">Search Type</label>
-								 <select form="searchForm" name="searchType">
-									<option value="title">Title</option>
-									<option value="actor">Actor</option>
-									<option value="year">Year</option>
-								</select>
-						
-								
-							</div>
-							
-						<input type="text" id="criteria" name="criteria" th:value="*{criteria}" placeholder="Enter search criteria" />	
-						<button type="submit" class="btn btn-info" >Search</button>
-  						<button type="reset" class="btn btn-info" >Reset</button>
-						
-						
+			<div class="row d-flex gap-3">
+				<div class="col-md-6 mt-2">
+
+					<div class="input-group-prepend gap-3">
+						<label class="input-group-text gap-3">Search Type</label>
+						<select form="searchForm" name="searchType">
+							<option value="title">Title</option>
+							<option value="actor">Actor</option>
+							<option value="year">Year</option>
+						</select>
+
+
 					</div>
+
+					<input type="text" id="criteria" name="criteria" th:value="*{criteria}"
+						placeholder="Enter search criteria" />
+					<button type="submit" class="btn btn-info">Search</button>
+					<button type="reset" class="btn btn-info">Reset</button>
+
+
 				</div>
+			</div>
 		</form>
 	</div>
-	
-	<div th:if="${items.size() > 0}">
-			<table class="table table-hover table-responsive-xl">
-				<thead class="thead-light">
-					<tr>
-						<th hidden="true" scope="col">Id</th>
-						<th scope="col">Title</th>
-						<th scope="col"></th>
-						<th scope="col"></th>
-						<th scope="col"></th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr th:each="item : ${items}">
-						<th hidden="true" scope="row">[[${item.id}]]</th>
-						<td>[[${item.tvgName}]]</td>
-						<form action="#" th:action="@{/newDownload}" method="get">
-					<td><input type="hidden" th:value="${item.tvgName}"
-						name="name" id="name" />
-						<button type="submit" class="btn btn-default btn-sm" name="action"
-							id="btndownload" value="download">
-							<i class="fa fa-download fa-lg"></i>
-						</button></td>
-				</form>
-				<form action="#" th:action="@{/stream}" method="get">
-					<td><input type="hidden" th:value="${item.tvgName}"
-						name="name" id="name" />
-						<button type="submit" class="btn btn-default btn-sm" name="action"
-							id="btnstream" value="stream">
-							<i class="fa fa-video-camera  fa-lg"></i>
-						</button></td>
-				</form>
-				<td><input type="hidden" th:value="${item.search}"
-					name="searchInfo" id="searchInfo" />
-					<button type="submit" class="btn btn-default btn-sm"
-						name="btninformation" id="btninformation"
-						th:onclick="openInformationModal(this);" th:value="${item.search}">
-						<i class="fa fa-info-circle fa-lg"></i>
-					</button></td>
-					</tr>
-				</tbody>
-			</table>
+
+	<div th:replace="~{fragments/itemsTable :: itemsTable}"></div>
+
+	<<div th:unless="${items.size() > 0}" style="color: crimson;">
+		<p style="text-align:center">No Titles found!</p>
 		</div>
 
-		<div th:unless="${items.size() > 0}">
-			<span>No Titles found!</span>
-		</div>
-		
 		<div th:replace="~{fragments/informationModal :: informationModal}"></div>
 
 		<div th:replace="~{fragments/movieDbApi :: movieDbApi}"></div>
-	
+
 </body>
+
 </html>
