--- a/M3UToolsJPA/src/main/resources/templates/search.html
+++ b/M3UToolsJPA/src/main/resources/templates/search.html
@@ -54,13 +54,13 @@
 
 	<div th:replace="~{fragments/itemsTable :: itemsTable}"></div>
 
-	<<div th:unless="${items.size() > 0}" style="color: crimson;">
+	<div th:unless="${items.size() > 0}" style="color: crimson;">
 		<p style="text-align:center">No Titles found!</p>
-		</div>
+	</div>
 
-		<div th:replace="~{fragments/informationModal :: informationModal}"></div>
+	<div th:replace="~{fragments/informationModal :: informationModal}"></div>
 
-		<div th:replace="~{fragments/movieDbApi :: movieDbApi}"></div>
+	<div th:replace="~{fragments/movieDbApi :: movieDbApi}"></div>
 
 </body>
 
