--- a/M3UToolsJPA/src/main/resources/templates/search.html
+++ b/M3UToolsJPA/src/main/resources/templates/search.html
@@ -36,13 +36,14 @@
 							<option value="title">Title</option>
 							<option value="actor">Actor</option>
 							<option value="year">Year</option>
+							<option th:each="genre : ${genres}"
+                    				th:value="${genre.id}"
+                    				th:text="${genre.name}">
+                    		</option>
 						</select>
-
-
+						<input type="text" id="criteria" name="criteria" th:value="*{criteria}"
+							placeholder="Enter search criteria" />
 					</div>
-
-					<input type="text" id="criteria" name="criteria" th:value="*{criteria}"
-						placeholder="Enter search criteria" />
 					<button type="submit" class="btn btn-info">Search</button>
 					<button type="reset" class="btn btn-info">Reset</button>
 
