--- a/M3UToolsJPA/src/main/resources/templates/search.html
+++ b/M3UToolsJPA/src/main/resources/templates/search.html
@@ -17,71 +17,85 @@
 	<link rel="stylesheet" type="text/css" th:href="@{/css/style.css}" />
 
 	<div th:replace="~{fragments/informationModalScript :: script}"></div>
-	
-	<style>*,
-*:after,
-*:before {
-    box-sizing: border-box;
-}
 
-form {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-}
+	<script>
+		function showCriteria() {
+			document.getElementById('genreDiv').style.display = 'none';
+			document.getElementById('criteriaDiv').style.display = 'block';
+		}
+
+		function showGenre() {
+			document.getElementById('genreDiv').style.display = 'block';
+			document.getElementById('criteriaDiv').style.display = 'none';
+		}
+	</script>
+
+	<style>
+		*,
+		*:after,
+		*:before {
+			box-sizing: border-box;
+		}
+
+		form {
+			display: flex;
+			flex-wrap: wrap;
+			flex-direction: row;
+		}
 
 
 
-label input {
-    position: absolute;
-    left: -9999px;
-}
+		label input {
+			position: absolute;
+			left: -9999px;
+		}
 
-label input:checked+span {
-    background-color: #d6d6e5;
-}
+		label input:checked+span {
+			background-color: #d6d6e5;
+		}
 
-label input:checked+span:before {
-    box-shadow: inset 0 0 0 0.4375em #00005c;
-}
+		label input:checked+span:before {
+			box-shadow: inset 0 0 0 0.4375em #00005c;
+		}
 
-label span {
-    display: flex;
-    align-items: center;
-    padding: 0.375em 0.75em 0.375em 0.375em;
-    border-radius: 99em;
-    transition: 0.25s ease;
-}
+		label span {
+			display: flex;
+			align-items: center;
+			padding: 0.375em 0.75em 0.375em 0.375em;
+			border-radius: 99em;
+			transition: 0.25s ease;
+		}
 
-label span:hover {
-    background-color: #d6d6e5;
-}
+		label span:hover {
+			background-color: #d6d6e5;
+		}
 
-label span:before {
-    display: flex;
-    flex-shrink: 0;
-    content: "";
-    background-color: #fff;
-    width: 1.5em;
-    height: 1.5em;
-    border-radius: 50%;
-    margin-right: 0.375em;
-    transition: 0.25s ease;
-    box-shadow: inset 0 0 0 0.125em #00005c;
-}
+		label span:before {
+			display: flex;
+			flex-shrink: 0;
+			content: "";
+			background-color: #fff;
+			width: 1.5em;
+			height: 1.5em;
+			border-radius: 50%;
+			margin-right: 0.375em;
+			transition: 0.25s ease;
+			box-shadow: inset 0 0 0 0.125em #00005c;
+		}
 
-.container {
-    position: inherit;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 20px;
-}</style>
+		.container {
+			position: inherit;
+			top: 0;
+			left: 0;
+			right: 0;
+			bottom: 0;
+			width: 100%;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			padding: 20px;
+		}
+	</style>
 </head>
 
 <body>
@@ -92,36 +106,44 @@ label span:before {
 		<h3 class="text-center">Search</h3>
 
 		<form th:action="@{/search}" id="searchForm">
-			
+
 			<div class="container">
 
-        <label>
-            <input type="radio" name="searchType" value="title" checked />
-            <span>Title</span>
-        </label>
-        <label>
-            <input type="radio" name="searchType" value="actor" />
-            <span>Actor</span>
-        </label>
-        <label>
-            <input type="radio" name="searchType" value="year" />
-            <span>Year</span>
-        </label>
-        <label>
-            <input type="radio" name="searchType" value="genre" />
-            <span>Genre</span>
-        </label>
+				<label>
+					<input type="radio" name="searchType" value="title" onclick="showCriteria()" checked />
+					<span>Title</span>
+				</label>
+				<label>
+					<input type="radio" name="searchType" value="actor" onclick="showCriteria()" />
+					<span>Actor</span>
+				</label>
+				<label>
+					<input type="radio" name="searchType" value="year" onclick="showCriteria()" />
+					<span>Year</span>
+				</label>
+				<label>
+					<input type="radio" name="searchType" value="genre" onclick="showGenre()" />
+					<span>Genre</span>
+				</label>
 
-</div>
-			
-								<div class="container" >
-						<input type="text" id="criteria" name="criteria" th:value="*{criteria}"
-							placeholder="Enter search criteria" />&nbsp;
-					<button type="submit" class="btn btn-info">Search</button>&nbsp;
-					<button type="reset" class="btn btn-info">Reset</button>
-					</div>
+			</div>
 
-			
+			<div class="container">
+
+				<div id="criteriaDiv">
+					<input type="text" id="criteria" name="criteria" th:value="*{criteria}"
+						placeholder="Enter search criteria" />&nbsp;
+				</div>
+				<div id="genreDiv" style="display: none;">
+					<select id="genre" name="genre" th:value="*{genre}" style="height: 30px; width: 256px;">
+						<option th:each="genre : ${genres}" th:value="${genre.id}" th:text="${genre.name}">
+						</option>
+					</select>&nbsp;
+
+				</div>
+				<button type="submit" class="btn btn-info">Search</button>&nbsp;
+				<button type="reset" class="btn btn-info">Reset</button>
+
 		</form>
 	</div>
 
