--- a/M3UToolsJPA/src/main/resources/templates/properties.html
+++ b/M3UToolsJPA/src/main/resources/templates/properties.html
@@ -18,16 +18,21 @@
 <script type="text/javascript">
 		function editProperty(key, value) {
 
-		var key = key;
-		var propertyValue = value;
+			var key = key;
+			var propertyValue = value;
+	
+			$("#editModalLabel").html(key);
+			$("#key").val(key);
+			$("#value").val(value);
+			$("#value").width("90%");
+			$("#editModal").modal("show");
 
-		$("#editModalLabel").html(key);
-		$("#key").val(key);
-		$("#value").val(value);
-		$("#value").width("90%");
-		$("#editModal").modal("show");
-
-	}
+		}
+		
+		function hideModal() {
+			$("#editModal").modal("hide");
+		}
+		
 </script>
 </head>
 
@@ -35,8 +40,6 @@
 	<div th:replace="~{fragments/header :: header}"></div>
 
 	<div class="container-fluid" style="max-width: 1024px; margin: 0 auto;">
-		<h3 class="text-center">Properties - <p th:text="*{propertyFile}"></p></h3>
-
 		<div th:if="${message != null}"
 			class="alert alert-success alert-dismissible fade show text-center message"
 			role="alert">
@@ -47,14 +50,8 @@
 			</button>
 		</div>
 		
-		<p align="center" style="font-style: italic;">Change Log Level</p>
-		<div>
-			<select class="form-control" id="dropDownList">
-    			<option th:each="level : ${logLevels}" th:value="${level}" th:text="${level}"></option>
-			</select>
-		</div>
 		<p></p>
-
+		<p align="center" style="font-style: italic;">Properties</p>
 		<div th:if="${properties.size() > 0}">
 			<table id="table" class="table table-striped">
 				<thead class="table-dark">
@@ -93,17 +90,13 @@
 			<form th:action="@{/updateProperty}" th:object="${configProperty}" th:method="post" action="submit">
 				<div class="modal-header form-group">
 					<h5 class="modal-title" id="editModalLabel" >Modal title</h5>
-					<button type="button" class="close" data-dismiss="modal"
-						aria-label="Close">
-						<span aria-hidden="true">&times;</span>
-					</button>
 				</div>
 				<div class="modal-body form-group">
 					<input type="hidden" id="key" name="key" th:field="*{key}"/>
 					<input type="text" id="value" name="value" th:field="*{value}"/>
 				</div>
 				<div class="modal-footer">
-					<input type="button" class="btn btn-secondary" data-dismiss="modal" value="Close"/>
+					<input type="button" class="btn btn-secondary" data-dismiss="modal" value="Close" onclick="hideModal()"/>
 					<input type="submit" class="btn btn-primary" value="Save"/>
 				</div>
 			</form>
