--- a/M3UToolsJPA/src/main/resources/templates/stream.html
+++ b/M3UToolsJPA/src/main/resources/templates/stream.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<title>Video Player" </title>
+	<title>Video Player</title>
 	<link rel="stylesheet" th:href="@{webjars/bootstrap/css/bootstrap.min.css}" />
 	<script th:src="@{webjars/jquery/jquery.min.js}"></script>
 	<script>
