Further security implementation

--- a/M3UToolsJPA/src/main/resources/templates/fragments/header.html
+++ b/M3UToolsJPA/src/main/resources/templates/fragments/header.html
@@ -42,5 +42,9 @@
 					<button type="button" class="btn btn-outline-success" th:onclick="|window.location.href='/search'|">Search</button>
 				</form>
 			</div>
+			<div style="align-items: end;">
+				<a href="/logout" />Logout</a>
+			</div>
+			
 		</div>
 	</nav>
