--- a/M3UToolsJPA/src/main/resources/templates/stream.html
+++ b/M3UToolsJPA/src/main/resources/templates/stream.html
@@ -27,7 +27,7 @@
 	<p align="center" style="font-style: italic;" th:text=${filmTitle}>
 	<div class="container mt-5">
 		<video id="videoPlayer" class="w-100" controls autoplay>
-			<source th:src="${streamUrl}" type="video/mp4">
+			<source th:src="@{/media(streamUrl=${streamUrl})}" type="video/mp4">
 			Your browser does not support the video tag.
 		</video>
 	</div>
