--- a/M3UToolsJPA/src/main/resources/templates/stream.html
+++ b/M3UToolsJPA/src/main/resources/templates/stream.html
@@ -28,7 +28,7 @@
 	<div class="container mt-5">
 		<video id="videoPlayer" class="w-100" controls autoplay>
 <!-- 			<source th:src="@{/stream(streamUrl=${streamUrl})}" type="video/mp4"> -->
-				<source th:src="@{/media(streamUrl=${streamUrl})}" type="video/mp4">
+				<source th:src=${streamUrl} type="video/mp4">
 			Your browser does not support the video tag.
 		</video>
 	</div>
