--- a/M3UToolsJPA/src/main/resources/templates/viewLog.html
+++ b/M3UToolsJPA/src/main/resources/templates/viewLog.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html>
-<head>
+<html lang="en" xmlns:th="http://www.thymeleaf.org"><head>
 <meta charset="UTF-8">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <meta name="viewport"
