--- a/M3UToolsJPA/src/main/resources/templates/fragments/itemsTable.html
+++ b/M3UToolsJPA/src/main/resources/templates/fragments/itemsTable.html
@@ -7,6 +7,7 @@
 				<th scope="col"></th>
 				<th scope="col"></th>
 				<th scope="col"></th>
+				<th scope="col"></th>
 			</tr>
 		</thead>
 		<tbody>
@@ -18,6 +19,14 @@
 						<button type="submit" class="btn btn-default btn-sm" name="action" id="btndownload"
 							value="download">
 							<i class="fa fa-download fa-lg"></i>
+						</button>
+					</td>
+				</form>
+				<form action="#" th:action="@{/downloadToServer}" method="get">
+					<td><input type="hidden" th:value="${item.tvgName}" name="name" id="name" />
+						<button type="submit" class="btn btn-default btn-sm" name="action" id="btncloudDownload"
+							value="download">
+							<i class="fa fa-cloud-download fa-lg"></i>
 						</button>
 					</td>
 				</form>
