--- a/M3UToolsJPA/src/main/resources/templates/fragments/itemsTable.html
+++ b/M3UToolsJPA/src/main/resources/templates/fragments/itemsTable.html
@@ -2,71 +2,22 @@
 
 
 	<div class="row">
-                <div class="col-xl-4" th:each="item : ${items}">
-                    <div class="product-container">
-                    	<table>
-							
-							<tr>
-								<td align="center"><img style="max-width: 30%; max-height: 30%;" th:src="${item.tvgLogo}" th:onclick="openInformationModal(this);" th:value="${item.search}"></td>
-							</tr>
-							<tr>
-								<td align="center">[[${item.tvgName}]]</td>
-							</tr>	             
-							<br>       	
-                    	</table>
-                    	
-                    	    
-                    </div>
-                </div>
-            </div>
-
-
-	<table class="table table-striped">
-		<thead class="table-dark">
-			<tr>
-				<th hidden="true" scope="col">Id</th>
-				<th scope="col">Title</th>
-				<th scope="col"></th>
-				<th scope="col"></th>
-				<th scope="col"></th>
-				<th scope="col"></th>
-			</tr>
-		</thead>
-		<tbody>
-			<tr th:each="item : ${items}">
-				<th hidden="true" scope="row">[[${item.id}]]</th>
-				<td>[[${item.tvgName}]]</td>
-				<form action="#" th:action="@{/newDownload}" method="get">
-					<td><input type="hidden" th:value="${item.tvgName}" name="name" id="name" />
-						<button type="submit" class="btn btn-default btn-sm" name="action" id="btndownload"
-							value="download">
-							<i class="fa fa-download fa-lg"></i>
-						</button>
-					</td>
-				</form>
-				<form action="#" th:action="@{/downloadToServer}" method="get">
-					<td><input type="hidden" th:value="${item.tvgName}" name="name" id="name" />
-						<button type="submit" class="btn btn-default btn-sm" name="action" id="btncloudDownload"
-							value="download">
-							<i class="fa fa-cloud-download fa-lg"></i>
-						</button>
-					</td>
-				</form>
-				<form action="#" th:action="@{/stream}" method="get">
-					<td><input type="hidden" th:value="${item.tvgName}" name="name" id="name" />
-						<button type="submit" class="btn btn-default btn-sm" name="action" id="btnstream"
-							value="stream">
-							<i class="fa fa-video-camera  fa-lg"></i>
-						</button>
-					</td>
-				</form>
-				<td><input type="hidden" th:value="${item.search}" name="searchInfo" id="searchInfo" />
-					<button type="submit" class="btn btn-default btn-sm" name="btninformation" id="btninformation"
-						th:onclick="openInformationModal(this);" th:value="${item.search}">
-						<i class="fa fa-info-circle fa-lg"></i>
-					</button>
-				</td>
-			</tr>
-		</tbody>
-	</table>
+		<div class="col-xl-4" th:each="item : ${items}">
+			<div class="product-container">
+				<table>
+					<tr>
+						<td align="center">
+							<img style="max-width: 30%; max-height: 30%;" th:src="${item.tvgLogo}"
+								th:onclick="openInformationModal(this);"
+								th:value="${item.search}">
+						</td>
+					</tr>
+					<tr>
+						<td align="center">[[${item.tvgName}]]</td>
+					</tr>
+					<br>
+				</table>
+			</div>
+		</div>
+	</div>
 </div>
