First implementation of epg listing

--- a/M3UToolsJPA/src/main/resources/templates/fragments/header.html
+++ b/M3UToolsJPA/src/main/resources/templates/fragments/header.html
@@ -20,6 +20,7 @@
 							<li><a class="dropdown-item" th:href="@{/resetDatabase}">Reset Database</a></li>
 							<li><a class="dropdown-item" th:href="@{/convertToStream}">Convert M3U to strm</a></li>
 							<li><a class="dropdown-item" th:href="@{/reloadEPG}">Reload EPG</a></li>
+							<li><a class="dropdown-item" th:href="@{/showEPG}">Show EPG</a></li>
 							<li><a class="dropdown-item" th:href="@{/properties}">Properties</a></li>
 						</ul>
 					</li>
