--- a/M3UToolsJPA/src/main/resources/templates/editChannelsForm.html
+++ b/M3UToolsJPA/src/main/resources/templates/editChannelsForm.html
@@ -1,110 +1,149 @@
+
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0" />
-	<title>M3UToolsJPA</title>
-	<script th:src="@{webjars/jquery/jquery.min.js}"></script>
-	<script th:src="@{webjars/bootstrap/js/bootstrap.bundle.min.js}"></script>
-	<script th:src="@{webjars/font-awesome/6.5.1/js/all.js}"></script>
-	<link rel="stylesheet" th:href="@{webjars/font-awesome/6.5.1/css/all.css}" />
-	<link rel="stylesheet" th:href="@{webjars/bootstrap/css/bootstrap.min.css}" />
+ <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+ <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0" />
+ <title>M3UToolsJPA</title>
+ <script th:src="@{webjars/jquery/jquery.min.js}"></script>
+ <script th:src="@{webjars/bootstrap/js/bootstrap.bundle.min.js}"></script>
+ <script th:src="@{webjars/font-awesome/6.5.1/js/all.js}"></script>
+ <link rel="stylesheet" th:href="@{webjars/font-awesome/6.5.1/css/all.css}" />
+ <link rel="stylesheet" th:href="@{webjars/bootstrap/css/bootstrap.min.css}" />
 
-	<script type="text/javascript">
-		function groupChange(selectObj) {
-			var idx = selectObj.selectedIndex;
-			var which = selectObj.options[idx].value;
-			// alert("id:" + idx + " name:" + encodeURIComponent(which));
-			if (selectObj.value) {
-				selectObj.form.submit(which);
-			}
-		}
-	</script>
+ <style>
+  #return-to-top {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    display: none;
+    z-index: 99;
+    font-size: 18px;
+    border: none;
+    outline: none;
+    background-color: #007bff;
+    color: white;
+    cursor: pointer;
+    padding: 15px;
+    border-radius: 50%;
+  }
+
+  #return-to-top:hover {
+    background-color: #555;
+  }
+ </style>
+
+ <script type="text/javascript">
+  function groupChange(selectObj) {
+   var idx = selectObj.selectedIndex;
+   var which = selectObj.options[idx].value;
+   if (selectObj.value) {
+    selectObj.form.submit(which);
+   }
+  }
+
+  $(document).ready(function() {
+    $(window).scroll(function() {
+      if ($(this).scrollTop() > 100) {
+        $('#return-to-top').fadeIn();
+      } else {
+        $('#return-to-top').fadeOut();
+      }
+    });
+
+    $('#return-to-top').click(function() {
+      $('html, body').animate({ scrollTop: 0 }, 600);
+      return false;
+    });
+  });
+ </script>
 </head>
 
 <body>
-	<div th:replace="~{fragments/header :: header}"></div>
-	<div class="container-fluid">
-		<h3 class="text-center">TV Channels</h3>
+ <div th:replace="~{fragments/header :: header}"></div>
+ <div class="container-fluid">
+  <h3 class="text-center">TV Channels</h3>
 
-		<div class="container">
-			<form th:action="@{/tvChannels}" id="searchForm">
-				<div class="row align-items-center">
-					<div class="col">
-						<div class="input-group">
-							<div class="input-group-prepend">
-								<label class="input-group-text" for="${group.id}">Channel Group:</label>
-								<select form="searchForm" name="groupId" th:onchange="'groupChange(this)'" ;>
-									<option th:each="group : ${groups}" th:value="${group.id}" th:text="${group.name}"
-										th:selected="${group.id==selectedGroup.id}">Groups
-									</option>
-								</select>
-							</div>
-						</div>
-					</div>
-					<div class="col">
-						<div class="input-group">
+  <div class="container">
+   <form th:action="@{/tvChannels}" id="searchForm">
+    <div class="row align-items-center">
+     <div class="col">
+      <div class="input-group">
+       <div class="input-group-prepend">
+        <label class="input-group-text" for="${group.id}">Channel Group:</label>
+        <select form="searchForm" name="groupId" th:onchange="'groupChange(this)'" ;>
+         <option th:each="group : ${groups}" th:value="${group.id}" th:text="${group.name}"
+          th:selected="${group.id==selectedGroup.id}">Groups
+         </option>
+        </select>
+       </div>
+      </div>
+     </div>
+     <div class="col">
+      <div class="input-group">
 
-							<input class="form-check-input" type="checkbox" th:name="showAll" th:checked="false"
-								th:onclick="|window.location.href='/showAllSelected'|">
-							<label class="form-check-label" for="flexCheckDefault">
-								&nbsp;Show All
-							</label>
-
-
-						</div>
-					</div>
-				</div>
-		
-		</form>
-	</div>
-	</div>
+       <input class="form-check-input" type="checkbox" th:name="showAll" th:checked="false"
+        th:onclick="|window.location.href='/showAllSelected'|">
+       <label class="form-check-label" for="flexCheckDefault">
+        &nbsp;Show All
+       </label>
 
 
-	</div>
+      </div>
+     </div>
+    </div>
+
+  </form>
+ </div>
+ </div>
+
+
+ </div>
 
 <div class="container">
-	<div class="row align-items-center">
-		<div class="col">
-			<form action="#" class="form-horizontal" th:action="@{/saveTvChannels}" th:object="${form}" method="post">
-				<fieldset>
-					<div class="col">
-						<input type="submit" id="submitButton" class="btn btn-success" th:value="Save">
-						<input type="reset" id="resetButton" class="btn btn-danger" th:value="Reset" />
-					</div>
-					<table class="table table-striped">
-						<thead class="table-dark">
-							<tr>
-								<th> Id</th>
-								<th> Tvg-Id</th>
-								<th> GroupId</th>
-								<th> Title</th>
-								<th> Selected</th>
-							</tr>
-						</thead>
-						<tbody>
-							<tr th:each="channel, itemStat : ${form.channels}">
-								<td><input th:name="|channels[${itemStat.index}].id|" th:value="${channel.getId()}" tabindex="-1" readonly/>
-								</td>
-								<td><input th:name="|channels[${itemStat.index}].tvgId|"
-										th:value="${channel.getTvgId()}" tabindex="-1" readonly/></td>
-								<td><input th:name="|channels[${itemStat.index}].groupId|"
-										th:value="${channel.getGroupId()}" tabindex="-1" readonly/></td>
-								<td><input th:size="30" th:placeholder="Name + ' ' + ${itemStat.count}"
-										th:name="|channels[${itemStat.index}].tvgName|"
-										th:value="${channel.getTvgName()}" tabindex="-1" readonly/></td>
-								<td><input type="checkbox" th:placeholder="Selected + ' ' + ${itemStat.count}"
-										th:name="|channels[${itemStat.index}].selected|"
-										th:checked="${channel.isSelected()}" /></td>
-							</tr>
-						</tbody>
-					</table>
-				</fieldset>
-			</form>
-		</div>
-	</div>
-	</div>
-	<div th:replace="~{fragments/footer :: footer}"></div>
+ <div class="row align-items-center">
+  <div class="col">
+   <form action="#" class="form-horizontal" th:action="@{/saveTvChannels}" th:object="${form}" method="post">
+    <fieldset>
+     <div class="col">
+      <input type="submit" id="submitButton" class="btn btn-success" th:value="Save">
+      <input type="reset" id="resetButton" class="btn btn-danger" th:value="Reset" />
+     </div>
+     <table class="table table-striped">
+      <thead class="table-dark">
+       <tr>
+        <th> Id</th>
+        <th> Tvg-Id</th>
+        <th> GroupId</th>
+        <th> Title</th>
+        <th> Selected</th>
+       </tr>
+      </thead>
+      <tbody>
+       <tr th:each="channel, itemStat : ${form.channels}">
+        <td><input th:name="|channels[${itemStat.index}].id|" th:value="${channel.getId()}" tabindex="-1" readonly/>
+        </td>
+        <td><input th:name="|channels[${itemStat.index}].tvgId|"
+          th:value="${channel.getTvgId()}" tabindex="-1" readonly/></td>
+        <td><input th:name="|channels[${itemStat.index}].groupId|"
+          th:value="${channel.getGroupId()}" tabindex="-1" readonly/></td>
+        <td><input th:size="30" th:placeholder="Name + ' ' + ${itemStat.count}"
+          th:name="|channels[${itemStat.index}].tvgName|"
+          th:value="${channel.getTvgName()}" tabindex="-1" readonly/></td>
+        <td><input type="checkbox" th:placeholder="Selected + ' ' + ${itemStat.count}"
+          th:name="|channels[${itemStat.index}].selected|"
+          th:checked="${channel.isSelected()}" /></td>
+       </tr>
+      </tbody>
+     </table>
+    </fieldset>
+   </form>
+  </div>
+ </div>
+ </div>
+ <div th:replace="~{fragments/footer :: footer}"></div>
+
+ <button id="return-to-top" title="Go to top"><i class="fas fa-arrow-up"></i></button>
 </body>
 
 </html>
