--- a/M3UToolsJPA/src/main/resources/templates/items.html
+++ b/M3UToolsJPA/src/main/resources/templates/items.html
@@ -7,11 +7,10 @@
 	content="width=device-width,initial-scale=1.0,minimum-scale=1.0" />
 <title>M3UToolsJPA</title>
 
-<script th:src="@{webjars/jquery/jquery.min.js}"></script>
+<script type="text/javascript" th:src="@{webjars/jquery/jquery.min.js}"></script>
 <!-- <script th:src="@{webjars/bootstrap/js/bootstrap.min.js}"></script> -->
-<script th:src="@{webjars/bootstrap/js/bootstrap.bundle.min.js}"></script>
-<script th:src="@{webjars/font-awesome/6.5.1/js/all.js}"></script>
-<link rel="stylesheet" th:href="@{webjars/font-awesome/6.5.1/css/all.css}"/>
+<script type="text/javascript" th:src="@{webjars/bootstrap/js/bootstrap.bundle.min.js}"></script>
+<script type="text/javascript" th:src="@{/webjars/htmx.org/dist/htmx.min.js}"></script>
 <link rel="stylesheet" th:href="@{webjars/bootstrap/css/bootstrap.min.css}" />
 
 
