--- a/M3UToolsJPA/src/main/resources/templates/m3ugroups.html
+++ b/M3UToolsJPA/src/main/resources/templates/m3ugroups.html
@@ -4,7 +4,7 @@
 <head>
     <title>M3U Groups</title>
     <link rel="stylesheet" type="text/css" href="/css/style.css">
-    <script src="https://unpkg.com/htmx.org@1.6.1"></script>
+    <script type="text/javascript" th:src="@{/webjars/htmx.org/dist/htmx.min.js}"></script>
 </head>
 <body>
     <h1>Select M3U Group</h1>
@@ -15,17 +15,6 @@
 
     <h2>Group Items</h2>
     <div id="itemsTable">
-        <table>
-            <thead>
-                <tr>
-                    <th>Item Name</th>
-                    <th>Item URL</th>
-                </tr>
-            </thead>
-            <tbody>
-                <!-- Items will be populated here -->
-            </tbody>
-        </table>
     </div>
 </body>
 </html>
