--- a/M3UToolsJPA/src/main/resources/templates/editChannelsForm.html
+++ b/M3UToolsJPA/src/main/resources/templates/editChannelsForm.html
@@ -7,8 +7,7 @@
  <title>M3UToolsJPA</title>
  <script th:src="@{webjars/jquery/jquery.min.js}"></script>
  <script th:src="@{webjars/bootstrap/js/bootstrap.bundle.min.js}"></script>
- <script th:src="@{webjars/font-awesome/6.5.1/js/all.js}"></script>
- <link rel="stylesheet" th:href="@{webjars/font-awesome/6.5.1/css/all.css}" />
+ <script type="text/javascript" th:src="@{/webjars/htmx.org/dist/htmx.min.js}"></script>
  <link rel="stylesheet" th:href="@{webjars/bootstrap/css/bootstrap.min.css}" />
 
  <style>
@@ -71,7 +70,7 @@
       <div class="input-group">
        <div class="input-group-prepend">
         <label class="input-group-text" for="${group.id}">Channel Group:</label>
-        <select form="searchForm" name="groupId" th:onchange="'groupChange(this)'" ;>
+        <select id="groupSelect" hx-get="/tv" hx-target="#channelsTable" hx-swap="innerHTML" hx-trigger="change" name="groupId">
          <option th:each="group : ${groups}" th:value="${group.id}" th:text="${group.name}"
           th:selected="${group.id==selectedGroup.id}">Groups
          </option>
@@ -83,7 +82,7 @@
       <div class="input-group">
 
        <input class="form-check-input" type="checkbox" th:name="showAll" th:checked="false"
-        th:onclick="|window.location.href='/showAllSelected'|">
+        hx-trigger="click" hx-post="/showSelected" hx-target="#channelsTable" hx-swap="innerHTML" />
        <label class="form-check-label" for="flexCheckDefault">
         &nbsp;Show All
        </label>
@@ -109,33 +108,8 @@
       <input type="submit" id="submitButton" class="btn btn-success" th:value="Save">
       <input type="reset" id="resetButton" class="btn btn-danger" th:value="Reset" />
      </div>
-     <table class="table table-striped">
-      <thead class="table-dark">
-       <tr>
-        <th> Id</th>
-        <th> Tvg-Id</th>
-        <th> GroupId</th>
-        <th> Title</th>
-        <th> Selected</th>
-       </tr>
-      </thead>
-      <tbody>
-       <tr th:each="channel, itemStat : ${form.channels}">
-        <td><input th:name="|channels[${itemStat.index}].id|" th:value="${channel.getId()}" tabindex="-1" readonly/>
-        </td>
-        <td><input th:name="|channels[${itemStat.index}].tvgId|"
-          th:value="${channel.getTvgId()}" tabindex="-1" readonly/></td>
-        <td><input th:name="|channels[${itemStat.index}].groupId|"
-          th:value="${channel.getGroupId()}" tabindex="-1" readonly/></td>
-        <td><input th:size="30" th:placeholder="Name + ' ' + ${itemStat.count}"
-          th:name="|channels[${itemStat.index}].tvgName|"
-          th:value="${channel.getTvgName()}" tabindex="-1" readonly/></td>
-        <td><input type="checkbox" th:placeholder="Selected + ' ' + ${itemStat.count}"
-          th:name="|channels[${itemStat.index}].selected|"
-          th:checked="${channel.isSelected()}" /></td>
-       </tr>
-      </tbody>
-     </table>
+     <div id="channelsTable">
+     </div>
     </fieldset>
    </form>
   </div>
