--- a/M3UToolsJPA/src/main/resources/templates/editChannelsForm.html
+++ b/M3UToolsJPA/src/main/resources/templates/editChannelsForm.html
@@ -33,14 +33,7 @@
  </style>
 
  <script type="text/javascript">
-  function groupChange(selectObj) {
-   var idx = selectObj.selectedIndex;
-   var which = selectObj.options[idx].value;
-   if (selectObj.value) {
-    selectObj.form.submit(which);
-   }
-  }
-
+  
   $(document).ready(function() {
     $(window).scroll(function() {
       if ($(this).scrollTop() > 100) {
@@ -54,6 +47,17 @@
       $('html, body').animate({ scrollTop: 0 }, 600);
       return false;
     });
+  });
+  
+//Function to run after HTMX request completes
+  function afterCall() {
+    var selectAll = document.getElementById("showAll");
+    selectAll.checked = false;
+  }
+
+  // Listen for the 'htmx:afterSwap' event
+  document.addEventListener('htmx:afterSwap', function(event) {
+    afterCall(); // Call your function after the swap
   });
  </script>
 </head>
@@ -81,7 +85,7 @@
      <div class="col">
       <div class="input-group">
 
-       <input class="form-check-input" type="checkbox" th:name="showAll" th:checked="false"
+       <input class="form-check-input" th:id="showAll" type="checkbox" th:name="showAll" th:checked="false"
         hx-trigger="click" hx-post="/showSelected" hx-target="#channelsTable" hx-swap="innerHTML" />
        <label class="form-check-label" for="flexCheckDefault">
         &nbsp;Show All
