--- a/M3UToolsJPA/src/main/resources/templates/fragments/header.html
+++ b/M3UToolsJPA/src/main/resources/templates/fragments/header.html
@@ -1,51 +1,42 @@
+
 <header th:fragment="header">
-	<link rel="stylesheet" th:href="@{css/headerStyle.css}" />
-	<nav class="navbar navbar-expand-lg navbar-dark bg-light gradient-custom">
-		<div class="container-fluid">
-			<a class="navbar-brand" th:href="@{/}">M3UToolsJPA</a>
-			<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-				data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-				aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-			</button>
-			<div class="collapse navbar-collapse" id="navbarSupportedContent">
-				<div class="navbar-nav me-auto mb-2 mb-lg-0">
-					<div sec:authorize="hasRole('ADMIN')">
-					<li class="nav-item dropdown">
-						<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-							aria-expanded="false">
-							Actions...
-						</a>
-						<ul class="dropdown-menu">
-							<li><a class="dropdown-item" th:href="@{/resetDatabase}">Reset Database</a></li>
-							<li><a class="dropdown-item" th:href="@{/convertToStream}">Convert M3U to strm</a></li>
-							<li><a class="dropdown-item" th:href="@{/reloadEPG}">Reload EPG</a></li>
-							<li><a class="dropdown-item" th:href="@{/showEPG}">Show EPG</a></li>
-							<li><a class="dropdown-item" th:href="@{/properties}">Properties</a></li>
-						</ul>
-					</li>
-					</div>
-					<div sec:authorize="hasRole('ADMIN')">
-					<li class="nav-item">
-						<a class="nav-link" th:href="@{/viewLog}">View Log</a>
-					</li>
-					</div>
-					<div sec:authorize="hasRole('ADMIN')">
-					<li class="nav-item">
-						<a class="nav-link" th:href="@{/tvChannels}">TV Channels</a>
-					</li>
-					</div>
-					<!--<li class="nav-item">
-						<a class="nav-link" th:href="@{/showStatus}">Status</a>
-					</li> -->
-				</ul>
-				<form class="d-flex" role="search">
-					<button type="button" class="btn btn-outline-success" th:onclick="|window.location.href='/search'|">Search</button>
-				</form>
-			</div>
-			<div style="align-items: end;">
-				<a href="/logout" />Logout</a>
-			</div>
-			
-		</div>
-	</nav>
+    <link rel="stylesheet" th:href="@{css/headerStyle.css}" />
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" th:href="@{/}">M3UToolsJPA</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <div sec:authorize="hasRole('ADMIN')" class="d-flex">
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                Actions
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" th:href="@{/resetDatabase}">Reset Database</a></li>
+                                <li><a class="dropdown-item" th:href="@{/convertToStream}">Convert M3U to strm</a></li>
+                                <li><a class="dropdown-item" th:href="@{/reloadEPG}">Reload EPG</a></li>
+                                <li><a class="dropdown-item" th:href="@{/showEPG}">Show EPG</a></li>
+                                <li><a class="dropdown-item" th:href="@{/properties}">Properties</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" th:href="@{/viewLog}">View Log</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" th:href="@{/tvChannels}">TV Channels</a>
+                        </li>
+                    </div>
+                </ul>
+                <form class="d-flex" role="search">
+                    <button type="button" class="btn btn-outline-success" th:onclick="|window.location.href='/search'|">Search</button>
+                </form>
+                <div class="d-flex align-items-center">
+                    <a class="btn btn-outline-danger ms-2" th:href="@{/logout}">Logout</a>
+                </div>
+            </div>
+        </div>
+    </nav>
+</header>
